// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`easyShip getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`easyShip listPickupSlots returns list of pickup slots if succesful 1`] = `
Array [
  Object {
    "AmazonOrderId": "String",
    "PickupSlotList": Array [
      Object {
        "PickupTimeEnd": 1969-07-21T02:56:03.000Z,
        "PickupTimeStart": 1969-07-21T02:56:03.000Z,
        "SlotId": "String",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
